--- a/neutrinos.tex
+++ b/neutrinos.tex
@@ -7,15 +7,17 @@ Neutrinos are fundamental particles which help make up the universe. They are al
 As previously stated, neutrinos are very weakly interacting; in fact, neutrinos can pass unscathed through a wall of lead several hundred light-years thick. Because neutrinos interact so rarely, studying neutrinos requires a massive detector and a powerful neutrino source. With that being said, we can only ``see'' a neutrino when they interact in a detector. In a collision, distinct charged particles are produced with each type of neutrino because of the weak force. An electron neutrino will create an electron, a muon neutrino will create a muon, and a tau neutrino will create a tau. The charged lepton track the particle leaves in the detector is how one figures out what type of neutrino interaction was ``seen''. Liquid Argon Time Projection Chambers are being used to study neutrinos due to their excellent imaging and particle identification capabilities. 
 
 \section{History of Neutrinos}
-The neutrino was first postulated by Wolfgang Pauli in 1931 to explain how to resolve the conservation of energy, momentum and angular momentum problem in beta decay. Pauli suggested that this missing energy might be carried off, unseen, by a neutral particle (he called neutron) which was escaping detection. James Chadwick discovered a much heavier nuclear particle in 1932 that he also named neutron, leaving two particles with the same name. Enrico Fermi was the first person to coin the term neutrino (which means little neutral one in italian) in 1933 to fix this confusion. 
+The neutrino was first postulated by Wolfgang Pauli in 1930 to explain how to resolve the conservation of energy, momentum and angular momentum problem in beta decay. Pauli suggested that this missing energy might be carried off, unseen, by a neutral particle (he called neutron) which was escaping detection. James Chadwick discovered a much heavier nuclear particle in 1932 that he also named neutron, leaving two particles with the same name. Enrico Fermi was the first person to coin the term neutrino (which means little neutral one in italian) in 1933 to fix this confusion. 
 
-Fermi's paper, which was published in 1934, unified Pauli's neutrino with Paul Dirac's positron and Werner Heisenberg's neutron-proton model and his theory accurately explained many experimentally observed results. Wang Ganchang first proposed the use of beta capture to experimentally detect neutrinos and in 1959 Clyde Cowan and Frederick Reines published their work stating that they had detected the neutrino. The experiment called for antineutrinos created in a nuclear reactor by beta decay that reacted with protons producing neutrons and positrons: $\nu_{e} +p^{+}\rightarrow n^{0} + e^{+}$. Once this happens, the positron finds an electron and they annihilate each other and the resulting gamma rays are detectable. The neutron is detected by neutron capture and the releasing of another gamma ray. 
+Fermi's paper, which was published in 1934, unified Pauli's neutrino with Paul Dirac's positron and Werner Heisenberg's neutron-proton model and his theory accurately explained many experimentally observed results. Wang Ganchang first proposed the use of beta capture to experimentally detect neutrinos and in 1956 Clyde Cowan and Frederick Reines published their work stating that they had detected the neutrino. The experiment called for antineutrinos created in a nuclear reactor by beta decay that reacted with protons producing neutrons and positrons: $\nu_{e} +p^{+}\rightarrow n^{0} + e^{+}$. Once this happens, the positron finds an electron and they annihilate each other and the resulting gamma rays are detectable. The neutron is detected by neutron capture and the releasing of another gamma ray. 
 
-In 1962 Leon M. Lenderman, Melvin Schwartz and Jack Steinberger were the first to detect interactions of the muon neutrino. 
+In 1962 Leon M. Lenderman, Melvin Schwartz and Jack Steinberger were the first to detect interactions of the muon neutrino \cite{leonlederman}. The trio received the 1988 Nobel Prize in Physics for their discovery of the muon neutrino. The experiment used a beam of energetic protons from Brookhaven's Alternating Gradient Synchrotron (AGS) to produce a shower of pions. These pions would then travel 70 ft. toward a 5,000 ton steel wall. The pions then decayed into muons and neutrinos, the neutrinos being the only particle making it through. These neutrinos would enter a neon-filled detector producing muon spark trails that were detected and photographed, proving the existence of muon neutrinos. The experiment's use of the first ever neutrino beam was pioneering work that scientists around the world still use today.  
 
-The first detection of the tau neutrino was announced in the summer of 2000 by the DONUT collaboration at Fermilab. In the late 1960s, many experiments found that the number of electron neutrinos arriving from the sun was around $1/3$ to $1/2$ the number predicted by the Standard Solar Model. This became known as the solar neutrino problem and remained unresolved for around thirty years. This problem was resolved by the discovery of neutrino oscillation and mass.\cite{neutrino}
+The first detection of the tau neutrino was announced in the summer of 2000 by the DONUT collaboration at Fermilab. The scientists used the Tevatron to produce an intense neutrino beam. The neutrinos then passed through layers of nuclear emulsion. When a neutrino interaction would occur, charged particles would leave visible tracks in the emulsion. 
 
 \subsection{Solar Oscillations and the Solar Neutrino Problem}
+
+In the late 1960s, many experiments found that the number of electron neutrinos arriving from the sun was around $1/3$ to $1/2$ the number predicted by the Standard Solar Model. This became known as the solar neutrino problem and remained unresolved for around thirty years. This problem was resolved by the discovery of neutrino oscillation and mass.\cite{neutrino}
 
 The solar neutrino flux derived from Bahcall's Standard Solar Model is shown in figure \ref{fig:solarmodel}. Nuclear fusion and decay processes produce an abundant amount of neutrinos. The standard solar model predicts that these reactions produce several groups of neutrinos, each with differing fluxes and energy spectra. The figure also shows the ranges of detection of existing solar neutrino experiments in different shades of blue to illustrate that they sample different portions of the solar neutrino energy spectrum. Three of these experiments, plus a new one, are discussed below.
 
