--- a/cnn_results.tex
+++ b/cnn_results.tex
@@ -76,11 +76,11 @@ The next step that was taken was to use CNN10000 to classify track candidate ima
 
 Figures \ref{fig:confusion_wrongnorm}, \ref{fig:prob_wrongnorm}, \ref{fig:confusion_rightnorm} and \ref{fig:prob_rightnorm} show the accuracy and $\mu/\pi$ separation of both the correct and incorrect normalized images. The confusion matrices are only composed of $\mu/\pi$ data. Other particles passed the cc-inclusive filter before the 75 cm track length cut and were all mis-id'ed as muons. Since CNN10000 has not seen any particles other than muons and pions, it makes sense that those get mis-id'ed. Figures \ref{fig:prob_wrongnorm} and \ref{fig:prob_rightnorm} don't have $\mu/\pi$separation comparable to \ref{fig:prob_plot}, but \ref{fig:prob_wrongnorm} does skew to higher probabilities compared to \ref{fig:prob_rightnorm}. This is to be expected and further work on quantifying the performance of CNN10000 should use the incorrect image making normalization. It is also expected that the separation isn't as defined as the testing dataset for CNN10000. CNN10000 was trained and tested using single particle muons and pions and the track candidate dataset come from BNB+Cosmic events, not to mentions all track candidates have passed the cc-inclusive filter that tags "muon-like" tracks therefore the pions in this sample look much closer in muon topology than the network has seen. Also, these images were made from wire and time ticks associated to hits from the track candidate that passed the cc-inclusive filter. This is different from the training images where a bounding box was drawn over the total $\mu$ or $\pi$ interaction. Spurious energy deposition from a $\pi-Ar$ interaction is most likely not included in the BNB+Cosmic images due to the tracking algorithm. To remedy this, the neural network needs to see more "muon-like" pions and muons and pions from a neutrino interaction passing the cc-inclusive filter as well as a larger particle variety including protons, photons and electrons. Although $\mu/\pi$ separation is lacking, CNN10000 does an excellent job of classifying muons and using higher CNN probability can increase purity. Figures \ref{fig:track_wrongnorm}, \ref{fig:track_rightnorm}, \ref{fig:momentum_wrongnorm} and \ref{fig:momentum_rightnorm} show the track and momentum distributions for these two datasets. In both sets you have an increase in data in the bin below 75 cm and at bins below 0.5 GeV. These distributions were made with events classified with 70\% probability of being a muon regardless of true particle type. 
 \end{comment}
-
+%-----------------------------Commenting out selection I original work------------------------------------------------------------------
 
 \subsection{Classification of MC data using Selection I CC-Inclusive Filter}
 
-CNN10000 was also used to classify track candidate images that were identified by the selection I cc-inclusive filter described in \cite{cc-inclusive}. Passing rates for each cut in this filter are shown in figure \ref{fig:table1}. As seen in section \ref{sel1orig}, wrong image normalization had a higher muon classification probability so all work done using selection I cc-inclusive filter was done using this normalization. Out of 188,880 events, 19,112 passed the cut right before the 75 cm track length cut which is a 10.1\% passing rate and comparable to the 10\% passing rate shown in figure \ref{fig:table1}. In time cosmics were also run over, out of 14,606 in time cosmics events, 302 passed the cut right before the 75 cm track length cut which is a 2.1\% passing rate comparable to the 2.7\% passing rate in the cc-inclusive tech-note. Figures \ref{fig:confusion_sel1mod} and \ref{fig:prob_sel1mod} show the accuracy and $\mu/\pi$ separation. Both plots are only composed of muons and pions and like selection I original data, all other particles were id'ed as muons. Also like selection I original data, muons are being identified at a very high rate. 
+After training CNN10000, it was then used to classify track candidate images that were identified by the selection I cc-inclusive filter described in chapter \ref{ch:meas}. Passing rates for each cut in this filter are shown in table \ref{table:mc}. Out of 188,880 events, 19,112 passed the cut right before the 75 cm track length cut which is a 10.1\% passing rate and comparable to the 10\% passing rate shown in table \ref{table:mc}. In time cosmics were also run over, out of 14,606 in time cosmics events, 302 passed the cut right before the 75 cm track length cut which is a 2.1\% passing rate comparable to the 2.7\% passing rate in the cc-inclusive tech-note. Figures \ref{fig:confusion_sel1mod} and \ref{fig:prob_sel1mod} show the accuracy and $\mu/\pi$ separation. Both plots are only composed of muons and pions due to the focus on $\mu/\pi$ separation and the fact that CNN10000 was only trained on muons and pions, however, for reference, all other particles that did pass selection I were mis-id'ed as muons. Muons are being identified at a very high rate, while pions are all being mis-id'ed as muons. This is due in part because the pion track candidate that does pass the cc-inclusive filter right before the 75 cm track length cut has already been identified as a muon candidate, hence, at a higher muon probability. Another reason for the pion mis'id can be attributed to the training/classifying dataset difference. For training, the pion images include the whole pion interaction in argon, including any decays or nucleon scattering. The image created from a BNB+Cosmic event used for classification only includes the track candidate that passed the cc-inclusive filter.
 Figure \ref{fig:sel1mod_track} shows the track range distributions of all events from selection I being classified by the CNN as a muon with a probability of 70\% regardless of true particle type. We get entries for the CNN curve in the lowest bin and none for the 75 cm curve. To see how many true CC events were identified by CNN10000 breaking down figure \ref{fig:sel1mod_track} by event type was necessary. Figures \ref{fig:sel1mod_stackedcnn} and \ref{fig:sel1mod_stackedoriginal} show track range distributions separated by signal and various backgrounds. Particle type was not taken into consideration in these plots so true CC event images can be any track candidate particle passing selection I cut right before track length cut including pions and protons. 
 
 To gain an even deeper understanding on how CNN10000 is performing, plotting these distributions with only muons and pions was done due to the fact that CNN10000 was trained with only those particles for $\mu/\pi$ separation. Figures \ref{fig:sel1mod_mupi_70stackedcnn}-\ref{fig:sel1mod_mupi_90stackedcnn} show the stacked histograms of signal and background of the track range distributions with varying CNN probabilities starting from 70\% and ending at 90\% probability. With higher probabilities we get a purer sample in the lower bin but we end up losing events as well. Momentum distributions for all signal/background events are shown in figure \ref{fig:sel1mod_parP}.    
@@ -108,35 +108,35 @@ To gain an even deeper understanding on how CNN10000 is performing, plotting the
 	\begin{subfigure}[b]{.9\textwidth}
 	\centering
 	\includegraphics[width=4in,height=2.5in]{figs/sel1mod_trackrange_wrongnorm_acc70_0706.png}
-	\caption{Track range distribution of events from Selection I Modified passing CNN with 70\% accuracy}
+	\caption{Track range distribution of events from Selection I passing CNN with 70\% accuracy}
 	\label{fig:sel1mod_track}
 	\end{subfigure}
 	\quad
 	\begin{subfigure}[b]{.45\textwidth}
 	\includegraphics[width=\textwidth, height=2in]{figs/sel1mod_cnn_stackedevent_0707.png}
-	\caption{Stacked signal and background track range distributions from Selection I Modified passing CNN with 70\% accuracy}
+	\caption{Stacked signal and background track range distributions from Selection I passing CNN with 70\% accuracy}
 	\label{fig:sel1mod_stackedcnn}
 	\end{subfigure}
 	\quad
 	\begin{subfigure}[b]{.45\textwidth}
 	\includegraphics[width=\textwidth, height=2in]{figs/sel1mod_original_stackedevents_0707.png}
-	\caption{Stacked signal and background track range distributions from Selection I Modified passing 75 cm track length cut}
+	\caption{Stacked signal and background track range distributions from Selection I passing 75 cm track length cut}
 	\label{fig:sel1mod_stackedoriginal}
 	\end{subfigure}
 	\quad
 	\begin{subfigure}[b]{.45\textwidth}
 	\includegraphics[width=\textwidth, height=2in]{figs/sel1mod_cnn_trackrange_mupi_acc70_0707.png}
-	\caption{Stacked signal muons and background muons/pions of track range distributions from Selection I Modified passing CNN with 70\% accuracy}
+	\caption{Stacked signal muons and background muons/pions of track range distributions from Selection I passing CNN with 70\% accuracy}
 	\label{fig:sel1mod_mupi_70stackedcnn}
 	\end{subfigure}
 	\quad
 	\begin{subfigure}[b]{.45\textwidth}
 	\includegraphics[width=\textwidth, height=2in]{figs/sel1mod_original_trackrange_mupi_acc70_0707.png}
-	\caption{Stacked signal muons and background muons/pions of track range distributions from Selection I Modified passing 75 cm track length cut}
+	\caption{Stacked signal muons and background muons/pions of track range distributions from Selection I passing 75 cm track length cut}
 	\label{fig:sel1mod_mupi_70stackedoriginal}
 	\end{subfigure}
 	\quad
-\caption{CNN10000 distributions of track candidate images output from Selection I Modified cc-inclusive filter}
+\caption{CNN10000 distributions of track candidate images output from Selection I cc-inclusive filter}
 \label{fig:sel1mod_CNN_dist}
 \end{figure}
 
@@ -146,55 +146,55 @@ To gain an even deeper understanding on how CNN10000 is performing, plotting the
 \centering
 	\begin{subfigure}[b]{.45\textwidth}
 	\includegraphics[width=\textwidth, height=2.5in]{figs/sel1mod_cnn_trackrange_acc75_0707.png}
-	\caption{Stacked signal muons and background muons/pions of track range distributions from Selection I Modified passing CNN with 75\% accuracy}
+	\caption{Stacked signal muons and background muons/pions of track range distributions from Selection I passing CNN with 75\% accuracy}
 	\label{fig:sel1mod_mupi_75stackedcnn}
 	\end{subfigure}
 	\quad
 	\begin{subfigure}[b]{.45\textwidth}
 	\includegraphics[width=\textwidth, height=2.5in]{figs/sel1mod_cnn_trackrange_acc80_0707.png}
-	\caption{Stacked signal muons and background muons/pions of track range distributions from Selection I Modified passing CNN with 80\% accuracy}
+	\caption{Stacked signal muons and background muons/pions of track range distributions from Selection I passing CNN with 80\% accuracy}
 	\label{fig:sel1mod_mupi_80stackedcnn}
 	\end{subfigure}
 	\quad
 	\begin{subfigure}[b]{.45\textwidth}
 	\includegraphics[width=\textwidth, height=2.5in]{figs/sel1mod_cnn_trackrange_acc85_0707.png}
-	\caption{Stacked signal muons and background muons/pions of track range distributions from Selection I Modified passing CNN with 85\% accuracy}
+	\caption{Stacked signal muons and background muons/pions of track range distributions from Selection I passing CNN with 85\% accuracy}
 	\label{fig:sel1mod_mupi_85stackedcnn}
 	\end{subfigure}
 	\quad
 	\begin{subfigure}[b]{.45\textwidth}
 	\includegraphics[width=\textwidth, height=2.5in]{figs/sel1mod_cnn_trackrange_acc90_0707.png}
-	\caption{Stacked signal muons and background muons/pions of track range distributions from Selection I Modified passing CNN with 90\% accuracy}
+	\caption{Stacked signal muons and background muons/pions of track range distributions from Selection I passing CNN with 90\% accuracy}
 	\label{fig:sel1mod_mupi_90stackedcnn}
 	\end{subfigure}
 	\quad
-\caption{CNN10000 stacked signal/background track range distributions of track candidate images output from Selection I Modified cc-inclusive filter}
+\caption{CNN10000 stacked signal/background track range distributions of track candidate images output from Selection I cc-inclusive filter}
 \label{fig:sel1modCNNdistacc}
 \end{figure}
 
 
 \begin{figure}[htp!]
 \centering
-	\begin{subfigure}[b]{.9\textwidth}
+	\begin{subfigure}[t]{.9\textwidth}
 	\centering
 	\includegraphics[width=\textwidth,height=3.5in]{figs/sel1mod_parP_wrongnorm_acc70_0706.png}
-	\caption{Momentum distribution of events from Selection I Modified passing CNN with 70\% accuracy}
+	\caption{Momentum distribution of events from Selection I passing CNN with 70\% accuracy}
 	\label{fig:sel1mod_momentum}
 	\end{subfigure}
 	\quad
-	\begin{subfigure}[b]{.45\textwidth}
+	\begin{subfigure}[t]{.45\textwidth}
 	\includegraphics[width=\textwidth,height=2.5in]{figs/sel1mod_cnn_parP_stackedevents_0707.png}
-	\caption{Stacked signal and background momentum distributions from Selection I Modified passing CNN with 70\% accuracy}
+	\caption{Stacked signal and background momentum distributions from Selection I passing CNN with 70\% accuracy}
 	\label{fig:sel1mod_momentum_stackedcnn}
 	\end{subfigure}
 	\quad
-	\begin{subfigure}[b]{.45\textwidth}
+	\begin{subfigure}[t]{.45\textwidth}
 	\includegraphics[width=\textwidth,height=2.5in]{figs/sel1mod_original_parP_stackedevents_0707.png}
-	\caption{Stacked signal and background momentum distributions from Selection I Modified passing 75 cm track length cut}
+	\caption{Stacked signal and background momentum distributions from Selection I passing 75 cm track length cut}
 	\label{fig:sel1mod_momentum_stackedoriginal}
 	\end{subfigure}
 	\quad
-\caption{CNN10000 momentum distributions of track candidate images output from Selection I Modified cc-inclusive filter}
+\caption{CNN10000 momentum distributions of track candidate images output from Selection I cc-inclusive filter}
 \label{fig:sel1mod_parP}
 \end{figure}
 
@@ -318,7 +318,8 @@ Lastly, figure \ref{fig:sel1mod_cnnperformance} shows a more representative perf
 It was shown that even though CNN10000 was trained with single particle generated muons and pions, it performs fairly well at classifying track candidate images from BNB+Cosmic events. Events have been regained below the 75 cm track length cut and the momentum and track range distributions have similar shapes to the distributions of Selection I. Efficiencies and purities were calculated for selection I events before 75 cm track length cut  with the CNN at 83\% probability and are 14\% and 62\% respectively. Although the CNN doesn't have separation between muons and pions and although all particles passing CNN are classified as muon, increasing CNN probability allows us to increase the purity as well as maintain an efficiency comparable to the 75 cm track length cut all while recovering events below that 75 cm cut. Out of the 6142 events that passed the CNN @ 83\% 1470 events were below the 75 cm cut, a recovery of 3.3\% of data with an purity of 15\%. Although these numbers are low, it is an improvement from the selecion I in both total efficiency and purity and an increase in phase space by recovering these events. 
 
 \section{Classification using CNN100000}
-CNN100000 was trained using 20,000 images of each $\mu/\pi/p/\gamma/e$. For classification of BNB+Cosmics and data, images were made from track candidates that passed the Selection I filter, however, unlike for classifying BNB+Cosmics using CNN10000, the classification of CNN100000 went further up Selection I's cut chain. For CNN100000, steps 1,2,3 and 4 seen in \ref{section:eventselection}. The results of using CNN100000 to classify BNB+Cosmics will be outlined below.
+For classification of BNB+Cosmics and data using CNN100000, images were made from track candidates that passed the Selection I filter, however, unlike for classifying BNB+Cosmics using CNN10000, the classification of CNN100000 went further up Selection I's cut chain. For CNN100000, steps 1,2,3 and 4 seen in \ref{section:eventselection} were removed. The image making algorithm would then create multiple images per event of pixels corresponding to each track associated to the flattest vertex candidate in the fiducial volume. One of the findings of CNN10000 was the possibility of recovering interesting events in which a pion from a cc-inclusive event is tagged as the track candidate of interest. This was the reason for trying to expand on what a convolutional neural network could accomplish. By allowing the CNN to particle ID all track associated with the vertex candidate, we allow the selection to contain the interesting events that were cut out in selection I due to the cc pion track being chosen as the track candidate. The results of using CNN100000 to classify BNB+Cosmics will be outlined below. 
+
 \subsection{Classification of MC data using Selection I CC-Inclusive Filter}
 \subsubsection{Kinematic truth distributions of BNB+Cosmic events passing Selection I+CNN10000}
 \begin{figure}[htp!]
